[project]
name = "pumpwood-flaskviews"
version = "1.5.28-b.0"
description = "Assist creation of flask views in Pumpwood format.."
readme = "README.md"
requires-python = ">=3.6,<4.0"
license = { text = "BSD-3-Clause License" }
authors = [
    { name = "Murabei Data Science", email = "a.baceti@murabei.com" }
]
urls = { Homepage = "https://github.com/Murabei-OpenSource-Codes/pumpwood-flaskviews" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-slugify>=6.1.1",
    "pumpwood-communication>=2.0",
    "pandas>=2.2.3",
    "MarkupSafe==3.0.2",
    "SQLAlchemy-Utils==0.37.8",
    "SQLAlchemy>=2.0.37",
    "GeoAlchemy2>=0.17.0",
    "orjson>=3.11.3",
    "loguru>=0.7.3",
    "marshmallow<4.0.0",
    "marshmallow-sqlalchemy<1.4.0",
]

[tool.poetry]
packages = [{ include = "pumpwood_flaskviews", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
indent-width = 4

exclude = [
    "secrets/",
    "__init__.py",
    "setup_template.py",
    "setup.py",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "D",
    "I",
    "PD",
    "N",
    "S",
]

ignore = [
    "E402",
    "N806",
    "I001",
]

preview = true

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
no-sections = true

[dependency-groups]
docs = [
    "mkdocs (>=1.6.1,<2.0.0)",
]
